--- a/pom.xml
+++ b/pom.xml
@@ -16,22 +16,13 @@
     <dependency>
       <groupId>org.javassist</groupId>
       <artifactId>javassist</artifactId>
-      <version>3.23.1-GA</version>
-    </dependency>
-    <dependency>
-      <groupId>io.reflectoring.diffparser</groupId>
-      <artifactId>diffparser</artifactId>
-      <version>1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.16.18</version>
+      <version>3.18.1-GA</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
