--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <dependency>
       <groupId>com.sun</groupId>
       <artifactId>tools</artifactId>
+      <version>1.6</version>
       <scope>system</scope>
       <systemPath>${toolsjar}</systemPath>
     </dependency>
